--- a/README
+++ b/README
@@ -49,6 +49,9 @@ Of course, it is also possible to switch off the executable bits of some
 files of this project in etc/portage/repo.postsync.d/*
 Then, of course, the corresponding functionality will be switched off.
 The project is written in such a way that this is not harmful.
+(Switching off the egencache functionality for the main repository is a
+bad idea, however; if you do it manually you should update metadata/timestamp.x
+correspondingly as also the prefetch functionality uses that timestamp file.)
 
 Finally, you can configure a lot of details through POSTSYNC_* variables
 in your /etc/portage/make.conf. Read etc/portage/repo.postsync.d/README
