--- a/etc/portage/repo.postsync.d/README
+++ b/etc/portage/repo.postsync.d/README
@@ -37,7 +37,7 @@
 # POSTSYNC_SHELL=/bin/sh
 
 # The file which contains helper functions needed in most scripts
-# POSTSYNC_FUNCTIONS="${EPREFIX}/lib/gentoo/repo.postsync.functions.sh"
+# POSTSYNC_FUNCTIONS="${EPREFIX}/etc/repo.postsync.d/portage-postsyncd-mv.sh"
 
 # The name of the main repository:
 # POSTSYNC_MAIN_REPOSITORY=gentoo
@@ -69,12 +69,28 @@
 # In case the pre-generated metadata cache for the main repository is fetched:
 # Only fetch the data if the fetched data is presumably not older than this
 # number of days
-# (0 means accept always, non-numerical values mean never)
+# (0 means fetch always, non-numerical values mean never)
 # POSTSYNC_DAYS_CACHE_MAX=1
 
 # The minimal number of days between two calls of git-gc in the main repository
 # (0 means never, and non-numerical values mean every time)
 # POSTSYNC_DAYS_GIT_GC=7
+
+# The minimal number of days between two calls of git-gc in overlays
+# (0 means never, and non-numerical values mean every time).
+# This is a list of the form
+# "repository days repository days ..."
+# The repository * means every repository except the main repository.
+# The repository ** means every repository.
+# The first matching repository is taken; git-gc is omitted if none matches.
+# It is not a good idea to specify the main repository here unless you disable
+# the "normal" handling of git-gc for the main repository (the latter can be
+# done e.g. by setting POSTSYNC_DAYS_GIT_GC=0), because otherwise git-gc might
+# be called twice for the main repository.
+# This feature uses the timestamp file $repository_path/.git/git-gc.date
+# The default is taken unless you set it to a nonempty value
+# (use e.g. POSTSYNC_DAYS_GIT_GC_REPO=" " to disable the feature).
+# POSTSYNC_DAYS_GIT_GC_REPO="* 30"
 
 # The number to use for --jobs when calling egencache.
 # The empty value (default) means the number of processors.
@@ -97,10 +113,12 @@
 # The default is:
 # POSTSYNC_EGENCACHE=""
 
-# This is prepended to POSTSYNC_EGENCACHE. Do not set it unless you want to
-# _remove_ the defaults for some reason
-# POSTSYNC_EGENCACHE_DEFAULT="
-# ** --ignore-default-opts ** --update ** --tolerant
+# This is prepended to POSTSYNC_EGENCACHE.
+# Do not set it unless you want to _remove_ the defaults for some reason.
+# The default is used if this variable is empty or unset; set it e.g. to a
+# space to clear all defaults. However, very likely you want to include
+# at least '** --update' in this variable.
+# POSTSYNC_EGENCACHE_DEFAULT="** --ignore-default-opts ** --update ** --tolerant
 # ${POSTSYNC_MAIN_REPOSITORY} --update-use-local-desc
 # mv --update-use-local-desc mv --changelog-reversed mv --update-changelog"
 
