--- a/README
+++ b/README
@@ -40,10 +40,15 @@ If you use app-portage/portage-utils, it is recommended to call
 
 	chmod a-x /etc/portage/repo.postsync.d/q-reinit
 
-In this way, this script will be executed at a more appropriate time
-and with more explicit output by etc/portage/repo.postsync.d/??-q-reinit
+(The file etc/portage/env/app-portage/portage-utils, when copied to the main
+tree, is a hack which will make this happen automatically at any future emerge
+of app-portage/portage-utils)
+In this way, the script /etc/portage/repo.postsync.d/q-reinit will be executed
+at a more appropriate time of syncing and with more explicit output by
+etc/portage/repo.postsync.d/??-q-reinit
 However, the latter script is careful to not do anything if you have
-not executed the command - nothing bad will happen.
+not executed the command - so nothing really bad will happen
+if you do not follow the above recommendation.
 
 Of course, it is also possible to switch off the executable bits of some
 files of this project in etc/portage/repo.postsync.d/*
