--- a/etc/portage/repo.postsync.d/README
+++ b/etc/portage/repo.postsync.d/README
@@ -108,21 +108,21 @@
 # repositories can be repeated.
 # The repository * means every repository except the main repository.
 # The repository ** means every repository.
-# Typical example:
-# POSTSYNC_EGENCACHE="local --update-use-local-desc"
+# Typical examples:
+# POSTSYNC_EGENCACHE=""
+# POSTSYNC_EGENCACHE="${POSTSYNC_EGENCACHE} local --update-use-local-desc"
 # POSTSYNC_EGENCACHE="${POSTSYNC_EGENCACHE} local --update-pkg-desc-index"
 # POSTSYNC_EGENCACHE="${POSTSYNC_EGENCACHE} gentoo --update-pkg-desc-index"
+# POSTSYNC_EGENCACHE="${POSTSYNC_EGENCACHE} mv --changelog-reversed"
+# POSTSYNC_EGENCACHE="${POSTSYNC_EGENCACHE} mv --update-changelog"
 # The default is:
-# POSTSYNC_EGENCACHE=""
+# POSTSYNC_EGENCACHE="mv --changelog-reversed mv --update-changelog"
 
 # This is prepended to POSTSYNC_EGENCACHE.
 # Do not set it unless you want to _remove_ the defaults for some reason.
-# The default is used if this variable is empty or unset; set it e.g. to a
-# space to clear all defaults. However, very likely you want to include
-# at least "** --update" in this variable.
+# Very likely you want to include at least "** --update" in this variable.
 # POSTSYNC_EGENCACHE_DEFAULT="** --ignore-default-opts ** --update ** --tolerant
-# ${POSTSYNC_MAIN_REPOSITORY} --update-use-local-desc
-# mv --update-use-local-desc mv --changelog-reversed mv --update-changelog"
+# ${POSTSYNC_MAIN_REPOSITORY} --update-use-local-desc"
 
 # The minimal number of days before syncing glsa again
 # (0 means never, and non-numerical values mean every time)
