--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 # ChangeLog for portage-postsyncd-mv
 
+*portage-postsyncd-mv-5.3.0:
+	Martin Väth <martin at mvath.de>:
+	- Fix simultaneous setting of several permissions
+	- More secure default dir permissions (sticky bit and group suid)
+
 *portage-postsyncd-mv-5.2.0:
 	Martin Väth <martin at mvath.de>:
 	- Introduce POSTSYNC_RSYNC_TIMEOUT and let it default to 20
